# gnu_umse

./: CMakeLists.txt  DONTCOMPILE-WORKING-IN-PROGRESS  Makefile  README.OBSOLETE
conf/: config  logo.asc
inc/: browse.h  config.h  file.h  global.h  input.h  listview.h  output.h  screen.h  static.h  str.h  struct.h  sys.h
plugins/: CMakeLists.txt  Makefile  README.OBSOLETE
plugins/inc/: global-plugin.h  global.h
plugins/mod-plugin/: mod-plugin.c  mod-plugin.h
plugins/sc68-plugin/: sc68-plugin.c  sc68-plugin.h
src/: .sys.c.swp  browse.c  config.c  file.c  input.c  listview.c  output.c  screen.c  static.c  str.c  sys.c  umse.c
